# RTLSDR-Scanner

./: .gitignore  README.md  pyproject.toml
rtlsdr_scanner/: devices.py  dialogs_devices.py  dialogs_file.py  dialogs_prefs.py  dialogs_tools.py  file.py  main_window.py  misc.py  panels.py  plot_controls.py  plot_line.py  plot_spect.py  spectrum.py  toolbars.py  utils_google.py  widgets.py
